# yew-app

./: Cargo.toml  Dockerfile  LICENSE_MIT  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json  setup.sh
src/: lib.rs  main.rs
