[package]
name = "create-wasm-template"
version = "0.1.0"
authors = ["Nils Sohn <sohn.cloud@proton.me>"]
edition = "2018"
description = "Boilerplate code for Web Assembly page integration with Node"
repository =  "https://github.com/sohndotcloud/WAVE.git"
license = "MIT "
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-9"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
