[package]
name = "create-wasm-template"
authors = ["Nils Sohn <sohn.cloud@proton.me>"]
version = "0.1.0"
edition = "2018"
description = "Boilerplate code for Web Assembly page integration with Node"
repository =  "https://github.com/sohndotcloud/WAVE.git"
license = "MIT "
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies]
libloading = "0.8.1"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }